fixed some spacing for landscape and stars3

--- a/style.css
+++ b/style.css
@@ -458,7 +458,7 @@ div li a:hover {
 #stars3
 {
 	top: 0;
-	width: 130%;
+	width: 160%;
 	height: auto;
 	visibility: visible;
 }
@@ -469,10 +469,11 @@ div li a:hover {
 	filter: brightness(15%);
 	top: 500px;
 	width: 100%;
-	height: 1020px;
+	height: 1140px;
 	justify-content: center;
 	align-items: center;
 	visibility: visible;
+	z-index: 1000px;
 	
 }
 #mySideBar
